@@ -31,7 +31,7 @@ General Public License for more details.
 @finalout
 @titlepage
 @title Transient User and Developer Manual
-@subtitle for version 0.1.0 (v0.1.0-115-gad7f255+1)
+@subtitle for version 0.1.0 (v0.1.0-129-gc1ae1ee+1)
 @author Jonas Bernoulli
 @page
 @vskip 0pt plus 1filll
@@ -65,7 +65,7 @@ Calling a suffix command usually causes the transient to be exited
 but suffix commands can also be configured to not exit the transient.
 
 @noindent
-This manual is for Transient version 0.1.0 (v0.1.0-115-gad7f255+1).
+This manual is for Transient version 0.1.0 (v0.1.0-129-gc1ae1ee+1).
 
 @quotation
 Copyright (C) 2018-2019 Jonas Bernoulli <jonas@@bernoul.li>
@@ -806,6 +806,15 @@ time there can be false-positives.  It is actually valid for
 multiple suffixes to share a common key binding, provided the
 predicates of those suffixes prevent that more than one of them is
 enabled at a time.
+@end defopt
+
+@defopt transient-force-fixed-pitch
+
+This option controls whether to force the use of a monospaced font
+in popup buffer.  Even if you use a proportional font for the
+@code{default} face, you might still want to use a monospaced font in
+transient's popup buffer.  Setting this option to t causes @code{default}
+to be remapped to @code{fixed-pitch} in that buffer.
 @end defopt
 
 @node Modifying Existing Transients
